Refactor project: Rename to token transfer and clean up project structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*",
+    "server.ts"   // Add your root-level server file here
+  ],
   "exclude": ["node_modules", "dist"]
 }
