--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dfyn-point-backend",
+  "name": "token-transfer",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -12,7 +12,7 @@
     "types:check": "tsc --pretty --noEmit",
     "prepare": "husky",
     "build": "tsc",
-    "start": "node server.ts"
+    "start": "node dist/server.js"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.1.0",
